crates/math-core/tests/snapshots/error_test__mathbin_letter.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x \\mathbin a y"
---
Error: Support for this argument isn't implemented yet for class-changing commands.
   ╭─[ <input>:1:12 ]
   │
 1 │ x \mathbin a y
   │            ┬  
   │            ╰── unsupported argument
───╯
